Connectionstring in appsetting json

--- a/AbstractFactory/AbstractFactory/appsettings.json
+++ b/AbstractFactory/AbstractFactory/appsettings.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "MinimalContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-bc;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   },
   "AllowedHosts": "*"
