Structure formt json conectionstring

--- a/AbstractFactory/AbstractFactory/appsettings.json
+++ b/AbstractFactory/AbstractFactory/appsettings.json
@@ -3,10 +3,10 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
-    "ConnectionStrings": {
-      "MinimalContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-bc;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MinimalApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
