Path map EndPoit

--- a/FactoryMethod/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod/FactoryMethod.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Example\Domain\" />
+    <Folder Include="Example\EndPoint\" />
   </ItemGroup>
 
 </Project>
