Add new path Extension validation

--- a/FactoryMethod/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod/FactoryMethod.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <Folder Include="Example\Domain\" />
     <Folder Include="Example\EndPoint\" />
+    <Folder Include="Example\Extensions\" />
     <Folder Include="Example\Validations\" />
   </ItemGroup>
 
