--- a/FactoryMethod/FactoryMethod/FactoryMethod.csproj
+++ b/FactoryMethod/FactoryMethod/FactoryMethod.csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Example\Domain\" />
+    <Folder Include="Example\Domain\Entities\" />
+    <Folder Include="Example\Domain\Interface\" />
+    <Folder Include="Example\Domain\ValeuObj\" />
     <Folder Include="Example\EndPoint\" />
     <Folder Include="Example\Extensions\" />
     <Folder Include="Example\Validations\" />
