--- a/Singleton/Singleton/appsettings.json
+++ b/Singleton/Singleton/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Units": {
+    "Temp": "Celsius",
+    "Distance": "Miles"
+  },
   "AllowedHosts": "*"
 }
